k8s/temporal-default/elasticsearch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o ./k8s/temporal-default
    kompose.version: 1.26.1 (1b040dd2)
  creationTimestamp: null
  labels:
    io.kompose.service: elasticsearch
  name: elasticsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: elasticsearch
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o ./k8s/temporal-default
        kompose.version: 1.26.1 (1b040dd2)
      creationTimestamp: null
      labels:
        io.kompose.network/temporal-network: "true"
        io.kompose.service: elasticsearch
    spec:
      containers:
        - env:
            - name: ES_JAVA_OPTS
              value: -Xms256m -Xmx256m
            - name: cluster.routing.allocation.disk.threshold_enabled
              value: "true"
            - name: cluster.routing.allocation.disk.watermark.flood_stage
              value: 128mb
            - name: cluster.routing.allocation.disk.watermark.high
              value: 256mb
            - name: cluster.routing.allocation.disk.watermark.low
              value: 512mb
            - name: discovery.type
              value: single-node
            - name: xpack.security.enabled
              value: "false"
          image: elasticsearch:7.16.2
          name: temporal-elasticsearch
          ports:
            - containerPort: 9200
          resources: {}
      restartPolicy: Always
status: {}
