k8s/temporal-default/temporal-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o ./k8s/temporal-default
    kompose.version: 1.26.1 (1b040dd2)
    kompose.volume.type: configMap
  creationTimestamp: null
  labels:
    io.kompose.service: temporal
  name: temporal
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: temporal
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o ./k8s/temporal-default
        kompose.version: 1.26.1 (1b040dd2)
        kompose.volume.type: configMap
      creationTimestamp: null
      labels:
        io.kompose.network/temporal-network: "true"
        io.kompose.service: temporal
    spec:
      containers:
        - env:
            - name: DB
              value: postgresql
            - name: DB_PORT
              value: "5432"
            - name: DYNAMIC_CONFIG_FILE_PATH
              value: config/dynamicconfig/development-sql.yaml
            - name: ENABLE_ES
              value: "true"
            - name: ES_SEEDS
              value: elasticsearch
            - name: ES_VERSION
              value: v7
            - name: POSTGRES_PWD
              value: temporal
            - name: POSTGRES_SEEDS
              value: postgresql
            - name: POSTGRES_USER
              value: temporal
          image: temporalio/auto-setup:1.17.1
          name: temporal
          ports:
            - containerPort: 7233
          resources: {}
          volumeMounts:
            - mountPath: /etc/temporal/config/dynamicconfig
              name: temporal-cm0
      restartPolicy: Always
      volumes:
        - configMap:
            name: temporal-cm0
          name: temporal-cm0
status: {}
