k8s/temporal-default/temporal-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o ./k8s/temporal-default
    kompose.version: 1.26.1 (1b040dd2)
  creationTimestamp: null
  labels:
    io.kompose.service: temporal-ui
  name: temporal-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: temporal-ui
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o ./k8s/temporal-default
        kompose.version: 1.26.1 (1b040dd2)
      creationTimestamp: null
      labels:
        io.kompose.network/temporal-network: "true"
        io.kompose.service: temporal-ui
    spec:
      containers:
        - env:
            - name: TEMPORAL_ADDRESS
              value: temporal:7233
            - name: TEMPORAL_CORS_ORIGINS
              value: http://localhost:3000
            - name: TEMPORAL_UI_PORT
              value: "8080"
          image: temporalio/ui:2.2.3
          name: temporal-ui
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
