k8s/temporal-default/temporal-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: temporal-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/temporal-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/temporal-network: "true"
